# Auto-Launcher

./: .gitignore  README.md
.github/workflows/: deploy.yml
docs/: manifest.schema.json  ops.md  protocol.md  security.md
launcher/: index.html  package-lock.json  package.json  tsconfig.json
launcher/src/: App.css  App.js  App.tsx
launcher/src-tauri/: Cargo.toml  tauri.conf.json
launcher/src-tauri/src/: main.rs
server/nginx/: patches.conf
tools/deployer/: config.example.json  deployer.py  requirements.txt
tools/patcher/: Cargo.toml
tools/patcher/releases/channels/: stable.json
tools/patcher/releases/manifests/: 1.0.0.json  1.2.0.json
tools/patcher/src/: main.rs
