[package]
name = "launcher"
version = "0.1.0"
description = "CanartWorks Launcher"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
futures = "0.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the mobile protocols
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
